--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         
         <!-- scripts -->
-        <script type="text/javascript" src="js/settings.js"></script> 
+        <script type="text/javascript" src="js/settings_1.js"></script> 
         <script type="text/javascript" src="data/output.js"></script> 
         <script type="text/javascript" src="data/topics.js"></script> 
         
